[gd_scene load_steps=5 format=3 uid="uid://t7wwbuy0cv17"]

[ext_resource type="Texture2D" uid="uid://dbp2nevsfbien" path="res://Resources/CutTileset/tile275.png" id="1_fffv6"]
[ext_resource type="Theme" uid="uid://cq6o71oo66iu6" path="res://Themes/menu_theme.tres" id="1_qabcs"]
[ext_resource type="Script" path="res://Scenes/UI/game_ui_resources.gd" id="2_gk5v8"]
[ext_resource type="Texture2D" uid="uid://b761dp6ds521a" path="res://Resources/CutTileset/tile206.png" id="2_tu133"]

[node name="GameUIResources" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -549.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qabcs")
script = ExtResource("2_gk5v8")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="GoldContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="GoldIcon" type="TextureRect" parent="VBoxContainer/GoldContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("1_fffv6")
expand_mode = 3
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="VBoxContainer/GoldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "= 100"

[node name="CrystalContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CrystalIcon" type="TextureRect" parent="VBoxContainer/CrystalContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_tu133")
expand_mode = 3
stretch_mode = 5

[node name="CrystalLabel" type="Label" parent="VBoxContainer/CrystalContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "= 100"
